--- a/css/_pros.scss
+++ b/css/_pros.scss
@@ -1,9 +1,8 @@
 .pros {
-    background: url("../assets/prosBg.png") no-repeat center;
+    background: url("../assets/prosBg.png") no-repeat center / cover;
 
     .container {
-        padding-top: 100px;
-        padding-bottom: 64px;
+        padding: 100px 0 150px;
     }
 
     .row {
@@ -13,7 +12,6 @@
 
     .prosBlock {
         margin-top: 70px;
-        height: 547px;
         display: flex;
 
         .btn {
@@ -91,10 +89,30 @@
     }
 }
 
+@media (max-width: 992px) {
+    .pros {
+        .prosBlock {
+            ul {
+                &:first-child {}
+
+                li {
+                    
+                }
+            }
+
+            .btn-block {
+                top: 11px;
+                right: 12px;
+            }
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .pros {
         .prosBlock {
             flex-direction: column;
+            
 
             ul {
                 width: 100%;
@@ -105,8 +123,29 @@
 
                 li {
                     width: 100%;
+                    
+                    .card-header {
+                        padding-right: 40px;
+                    }
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .pros {
+        .container {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+    }
+}
+
+@media (max-width: 478px) {
+    .pros {
+        .prosBlock {
+            
         }
     }
 }
