--- a/css/_stages.scss
+++ b/css/_stages.scss
@@ -120,3 +120,9 @@
   .swiper-pagination {
       display: none;
   }
+
+  @media (max-width: 992px) {
+      .stages {
+          display: none;
+      }
+  }
