--- a/css/_pros.scss
+++ b/css/_pros.scss
@@ -1,5 +1,5 @@
 .pros {
-    background: url("../assets/prosBg.png") no-repeat center / cover;
+    background: url("../assets/prosBg.jpg") no-repeat center / cover;
 
     .container {
         padding: 100px 0 150px;
