--- a/form_completed/style.css
+++ b/form_completed/style.css
@@ -72,18 +72,6 @@ a:hover {
   margin-top: 10px;
 }
 
-@media (max-width: 992px) {
-  .header2 {
-    font-size: 24px;
-  }
-  .header3 {
-    font-size: 18px;
-  }
-  .header4 {
-    font-size: 16px;
-  }
-}
-
 .card {
   text-align: center;
   position: absolute;
@@ -132,5 +120,32 @@ a:hover {
   color: #f2f2f2;
   background-color: #0E0B09;
   border-color: #0E0B09;
+}
+
+@media (max-width: 576px) {
+  .card {
+    width: 320px;
+    height: 324px;
+  }
+  .header1 {
+    font-size: 36px;
+  }
+  .header3 {
+    font-size: 18px;
+  }
+  .header4 {
+    font-size: 14px;
+    margin-top: 15px;
+  }
+  .backBtn {
+    margin-top: 30px;
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 350px) {
+  .card {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
