--- a/css/_questions.scss
+++ b/css/_questions.scss
@@ -1,3 +1,7 @@
+.amoforms_submit-button {
+    background-color: red;
+}
+
 .questions {
     background: url("../assets/questionsBg.svg") no-repeat center / cover;
 
