--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,6 @@
 @import "./variables";
+@import "./fixed";
+@import "./burgerPages";
 @import "./welcomePage";
 @import "./discount";
 @import "./projects";
