--- a/css/_fixed.scss
+++ b/css/_fixed.scss
@@ -160,6 +160,12 @@
                 margin-right: 30px;
                 z-index: 1;
                 position: relative;
+                font-size: 22px;
+                font-family: "Montserrat", sans-serif;
+
+                span {
+                    padding-left: 5px;
+                }
     
                 &:after {
                     position: absolute;
@@ -195,3 +201,91 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    #fixedModal {
+        .modal-header {
+            .topNav {
+                display: block;
+                position: absolute;
+                top: 7px;
+                right: 7px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 40px;
+                width: 40px;
+                height: 40px;
+
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    #fixedModal {
+        .modal-content {
+            padding-right: 20px;
+            padding-left: 20px;
+        }
+
+        .modal-body {
+            form {
+                button {
+                    span {
+                        display: none;
+                    }
+                }
+    
+                .reqInputs {
+                    flex-direction: column;
+                }
+    
+                input[type="text"] {
+                    width: 100%;
+                    margin-bottom: 20px;
+                    max-width: none;
+                    padding-top: 14px;
+                    padding-bottom: 14px;
+                }
+    
+                input[type="tel"] {
+                    width: 100%;
+                    max-width: none;
+                    padding-top: 14px;
+                    padding-bottom: 14px;
+                }
+
+                textarea {
+                    margin-top: 20px;
+                    max-height: 80px;
+                }
+
+                .checkbox {
+                    margin-top: 22px;
+                    margin-right: 0px;
+
+                    label {
+                        font-size: 10px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 340px) {
+    #fixedModal {
+        .modal-header {
+            .header3 {
+                font-size: 16px;
+            }
+
+            .header4 {
+                font-size: 14px;
+            }
+        }
+    }
+}
+
